2014-12-06	Franz Holzinger <franz@ttproducts.de>
	* support for backend live search
	* add listener hook

2013-03-21	Franz Holzinger <franz@ttproducts.de>
	* add the file ext_autoload.php
	* add marker functions
	* add support for Ajax based gateway code

2013-01-14	Franz Holzinger <franz@ttproducts.de>
	* changed API: new parameter $bFinalVerify

2012-05-26	Franz Holzinger <franz@ttproducts.de>
	* make amount a double value
	* add markers

2012-01-20	Franz Holzinger <franz@ttproducts.de>
	* Do not overwrite a formerly generated error message
	* support for the new language system of TYPO3 4.6

2011-08-26	Franz Holzinger <franz@ttproducts.de>
	* fix bug: the interface file must be included

2011-08-08	Franz Holzinger <franz@ttproducts.de>
	* move the call to set the detailsArray to the front because some Gateways need the data to make a verification

2011-05-24	Franz Holzinger <franz@ttproducts.de>
	* fix bug with wrong parameter encodage of success and failure links

2010-12-27	Franz Holzinger <franz@ttproducts.de>
	* Consider the vouchers as virtual products having VOUCHER as itemnumber
	* fill in $errorMessage in all error cases

2009-12-31	Franz Holzinger <franz@ttproducts.de>
	* The code is derived from franz's branch of paymentlib
	* This extension uses code from tt_products 2.9.0 and paymentlib_paypal 0.0.4
	* Initial upload
